<resources>
    <string name="app_name">kotlin splash screen app</string>
    <string name="logo">logo</string>
    <string name="lomusic">LoMusic</string>
    <string name="username">Username</string>
    <string name="wellcom_to_lomusic">Wellcom to LoMusic</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="password">Password</string>
    <string name="signup">Signup</string>
    <string name="Signin">Login</string>
    <string name="you_don_t_have_an_account_signup">You don\'t have an account? Signup</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="already_have_an_account_signin">Already have an account? signin</string>
    <string name="home_screen">Home Screen</string>
    <string name="profile">Profile</string>
    <string name="trending">Trending</string>
    <string name="sign_out">Sign out</string>
    <string name="wedfarran6_gmail_com">wedfarran6@gmail.com</string>
    <string name="wed_farran">Wed Farran</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="favorite">favorite</string>
</resources>